[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "aysha",email = "aayykuk@mail.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "greenlet (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
